@@ -10,7 +10,9 @@
     - child processes can't use MOM's logging, must use syslog
   fix overflow in RM netload (USC)
   don't check walltime on sister nodes, only on MS (ANU)
-  kill_task wasn't being declared proper for all mach types (USC)
+  kill_task wasn't being declared properly for all mach types (USC)
+  don't unnecessarily link with libelf and libdl (USC)
+  fix compile warnings with qsort/bsearch on bsd/darwin (USC)
 
 2.0.0p2
 
